--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -1,18 +1,13 @@
 <%- include ("header") %>
 
     <body>
-        <div id="map_accueil">
-            <!-- Ici s'affichera la carte -->
-        </div>
         <div class="container" id="search">
-            <div class="row centered-form">
-                <div
-                    class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-4">
-                    <div class="shadow p-3 mb-5 bg-white">
-                        <div class="card ">
-                            <!-- <div class="card-header"> -->
+            <div class="row centered-form" style="width:100 vw; height: 100vh;">
+                <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-4">
+                    <div class="shadow p-3 mb-5 bg-white" style="margin-top: 25%;">
+
+                        <div class="card">
                                 <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Où allez-vous ?</h3>
-                            <!-- </div> -->
                             <div class="card-block">
                                 <form role="form" action="/search">
                                     <div class="form-group">
@@ -31,135 +26,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="container" id="history">
-            <div class="row centered">
-                <div
-                    class="col-xs-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2">
-                    <div class="shadow p-3 mb-5 bg-white">
-                        <div class="card-block">
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Départ : Paris
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Destination : Marseille
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="centered row">
-                                <div class="col-xs-8 col-sm-8 col-md-8">
-                                    <div class="form-group">
-                                        Date : 01/04/2021
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group centered">
-                                        Heure de départ : 12h30
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Heure d'arrivée : 16h00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group centered">
-                                        Distance : 660 km
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Prix : 120.35 euros
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="shadow p-3 mb-5 bg-white">
-                        <div class="card-block">
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Départ : Paris
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Destination : Marseille
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-8 col-sm-8 col-md-8">
-                                    <div class="form-group">
-                                        Date : 01/04/2021
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group centered">
-                                        Heure de départ : 14h30
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Heure d'arrivée : 18h00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group centered">
-                                        Distance : 660 km
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        Prix : 103.95 euros
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Fichiers Javascript -->
-            <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-                integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-                crossorigin=""></script>
-            <script type="text/javascript">
-                // On initialise la latitude et la longitude de Paris (centre de la carte)
-                var lat = 48.852969;
-                var lon = 2.349903;
-                var macarte = null;
-                // Fonction d'initialisation de la carte
-                function initMap() {
-                    // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-                    macarte = L.map('map_accueil').setView([lat, lon], 11);
-                    // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
-                    L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-                        // Il est toujours bien de laisser le lien vers la source des données
-                        attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
-                        minZoom: 1,
-                        maxZoom: 20
-                    }).addTo(macarte);
-                }
-                window.onload = function () {
-                    // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
-                    initMap();
-                };
-            </script>
+           
     </body>
 
 
