--- a/views/Templates/search.ejs
+++ b/views/Templates/search.ejs
@@ -21,7 +21,7 @@
             <div class="bs-canvas-content px-3 py-5">
                 <form role="form">
                     <div class="form-group">
-                        <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
+                        <input type="lieu_depart" name="lieu_depart" id="lieu_depart" required
                             class="form-control form-control-sm" placeholder="Départ...">
                     </div>
                     <div class="form-group">
@@ -38,8 +38,14 @@
 
                 <!-- For loop a mettre la  -->
                 <% for (var data in records) {%>
+
+                    <script>
+                        var origine = '<%= records[data].fields.origine %>'
+                        var destination = '<%= records[data].fields.destination %>'
+                    </script>
+
                     <div class="shadow p-3 mb-5 bg-white">
-                        <div class="card-block">
+                        <div class="card-block" onclick="item_selected(origine, destination)">
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
@@ -89,80 +95,8 @@
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
             integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
             crossorigin=""></script>
-        <script type="text/javascript">
-            // On initialise la latitude et la longitude de Paris (centre de la carte)
-            var lat = 48.852969;
-            var lon = 2.349903;
-            var macarte = null;
-            // Fonction d'initialisation de la carte
-            function initMap() {
-                // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-                macarte = L.map('map').setView([lat, lon], 11);
-                // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
-                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-                    // Il est toujours bien de laisser le lien vers la source des données
-                    attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
-                    minZoom: 1,
-                    maxZoom: 20
-                }).addTo(macarte);
-            }
-            window.onload = function () {
-                // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
-                initMap();
-                $('[data-toggle="canvas"][aria-expanded="false"]').click();
-            };
-            jQuery(document).ready(function ($) {
-                var bsDefaults = {
-                    offset: false,
-                    overlay: true,
-                    width: '430px'
-                },
-                    bsMain = $('.bs-offset-main'),
-                    bsOverlay = $('.bs-canvas-overlay');
 
-                $('[data-toggle="canvas"][aria-expanded="false"]').on('click', function () {
-                    var canvas = $(this).data('target'),
-                        opts = $.extend({}, bsDefaults, $(canvas).data()),
-                        prop = $(canvas).hasClass('bs-canvas-right') ? 'margin-right' : 'margin-left';
-
-                    if (opts.width === '100%')
-                        opts.offset = false;
-
-                    $(canvas).css('width', opts.width);
-                    if (opts.offset && bsMain.length)
-                        bsMain.css(prop, opts.width);
-
-                    $(canvas + ' .bs-canvas-close').attr('aria-expanded', "true");
-                    $('[data-toggle="canvas"][data-target="' + canvas + '"]').attr('aria-expanded', "true");
-                    if (opts.overlay && bsOverlay.length)
-                        bsOverlay.addClass('show');
-                    return false;
-                });
-
-                $('.bs-canvas-close, .bs-canvas-overlay').on('click', function () {
-                    var canvas, aria;
-                    if ($(this).hasClass('bs-canvas-close')) {
-                        canvas = $(this).closest('.bs-canvas');
-                        aria = $(this).add($('[data-toggle="canvas"][data-target="#' + canvas.attr('id') + '"]'));
-                        if (bsMain.length)
-                            bsMain.css(($(canvas).hasClass('bs-canvas-right') ? 'margin-right' : 'margin-left'), '');
-                    } else {
-                        canvas = $('.bs-canvas');
-                        aria = $('.bs-canvas-close, [data-toggle="canvas"]');
-                        if (bsMain.length)
-                            bsMain.css({
-                                'margin-left': '',
-                                'margin-right': ''
-                            });
-                    }
-                    canvas.css('width', '');
-                    aria.attr('aria-expanded', "false");
-                    if (bsOverlay.length)
-                        bsOverlay.removeClass('show');
-                    return false;
-                });
-            });
-        </script>
+        <script src="/views/script/search.js"> </script>
     </body>
 
 
