--- a/views/Templates/history.ejs
+++ b/views/Templates/history.ejs
@@ -8,101 +8,44 @@
 					<div class="row centered">
 						<div
 							class="col-xs-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2">
-							<div class="shadow p-3 mb-5 bg-white">
-								<div class="card-block">
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Départ : Paris
+							
+							<% for (var data in historiques) {%>
+								<div class="shadow p-3 mb-5 bg-white">
+									<div class="card-block" onclick="item_selected(origine, destination, prix1, prix2)">
+										<div class="row">
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group">
+													Départ : <%= historiques[data].origine %>
+												</div>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group">
+													Destination : <%= historiques[data].destination %>
+												</div>
 											</div>
 										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Destination : Marseille
+										<div class="row">
+											<div class="col-xs-8 col-sm-8 col-md-8">
+												<div class="form-group">
+													Date : 01/04/2021
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="centered row">
-										<div class="col-xs-8 col-sm-8 col-md-8">
-											<div class="form-group">
-												Date : 01/04/2021
+										<div class="row">
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group centered">
+													tarif 1 : <%= historiques[data].prix1 %> $
+												</div>
 											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group centered">
-												Heure de départ : 12h30
-											</div>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Heure d'arrivée : 16h00
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group centered">
-												Distance : 660 km
-											</div>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Prix : 120.35 euros
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group">
+													tarif 2 :  <%= historiques[data].prix2%> $
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-
-							<div class="shadow p-3 mb-5 bg-white">
-								<div class="card-block">
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Départ : Paris
-											</div>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Destination : Marseille
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-xs-8 col-sm-8 col-md-8">
-											<div class="form-group">
-												Date : 01/04/2021
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group centered">
-												Heure de départ : 14h30
-											</div>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Heure d'arrivée : 18h00
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group centered">
-												Distance : 660 km
-											</div>
-										</div>
-										<div class="col-xs-6 col-sm-6 col-md-6">
-											<div class="form-group">
-												Prix : 103.95 euros
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+							<%}%>
 						</div>
 					</div>
 				</div>
