--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -23,7 +23,7 @@
                                     <form role="form">
                                         <div class="form-group">
                                             <input type="email" name="email" id="email"
-                                                class="form-control form-control-sm" placeholder="Email Address">
+                                                class="form-control form-control-sm" placeholder="Email Address" value=<%= email %>>
                                         </div>
 
                                         <div class="row">
